# starting-ragchatbot-codebase

./: CLAUDE.md  TEST_RESULTS.md  format.sh  frontend-changes.md  pyproject.toml  quality_check.sh  query-flow-diagram.md
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_integration.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
